Bug 118674 - Paste Special - Unformatted text isn't working inside a textbox
Summary: Paste Special - Unformatted text isn't working inside a textbox
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
5.4.0.0.alpha1+
Hardware: All All
: medium normal
Assignee: Maxim Monastirsky
URL:
Whiteboard: target:6.2.0
Keywords:
Depends on:
Blocks: Paste-Special-Unformatted
  Show dependency treegraph
 
Reported: 2018-07-10 16:52 UTC by Telesto
Modified: 2018-09-17 04:56 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2018-07-10 16:52:08 UTC
Description:
Paste Special - Unformatted text isn't working inside a textbox

Steps to Reproduce:
1. Launch Writer
2. Type some text & copy it
3. Insert -> Textbox
4. Type something into the textbox 
5. Edit -> Paste Unformatted text -> No effect

Actual Results:
Pasting unformatted text isn't working

Expected Results:
Ideally working; or disabled the menu item


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 6.1.0.1
Build ID: 378e26bd4f22a135cef5fa17afd5d4171d8da21a
CPU threads: 4; OS: Mac OS X 10.12.6; UI render: default; 
Locale: nl-NL (nl_NL.UTF-8); Calc: group threaded
Comment 1 V Stuart Foote 2018-07-10 18:03:59 UTC
Confirmed on Windows 10 Home 64-bit en-US with
Version: 6.2.0.0.alpha0+ (x64)
Build ID: d27e4007c697f5eb78181181a0ddcd663ac265b2
CPU threads: 4; OS: Windows 10.0; UI render: default; 
TinderBox: Win-x86_64@42, Branch:master, Time: 2018-07-10_00:34:24
Locale: en-US (en_US); Calc: CL

The clipboard holds the copied text in multiple formats including CF_TEXT, CF_UNICODETEXT, Rich Text Format, HTML Format, Richtext Format, Star Embed Source (XML), HTML (HyperText Markup Language), Link, and Star Object Descriptor (XML)

With it selected with cursor focus, the Paste (Ctrl+v) into the Drawing Text Box object does paste some flavor of styled text (either HTML, RTF, or XML can't tell).  But the Edit -> Paste Unformatted Text (Ctrl+Alt+Shift+v) does not respond; and Edit -> Paste Special is inactive.
Comment 2 Xisco Faulí 2018-07-11 09:45:39 UTC
Also reproducible in

Version: 5.3.0.0.alpha1+
Build ID: 4136757b4e51c4e6f7cb4132c95538a7f831ef2c
CPU Threads: 4; OS Version: Linux 4.13; UI Render: default; VCL: gtk3; Layout Engine: new; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group

The paste special option is disabled, I guess we should do the same for unformatted option....
Comment 3 Commit Notification 2018-09-02 16:07:31 UTC
Maxim Monastirsky committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=8fb5567dc05397e9b28b821b2d3ff2735ccdeb33

tdf#118674 Paste special and unformatted for shapes in Writer

It will be available in 6.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 BogdanB 2018-09-15 15:04:09 UTC
Works as aspected:

Version: 6.2.0.0.alpha0+
Build ID: 9a9b81c7212fa6a6762246593acf3f1950677a22
CPU threads: 4; OS: Linux 4.15; UI render: GL; VCL: gtk2; 
TinderBox: Linux-rpm_deb-x86_64@86-TDF, Branch:master, Time: 2018-09-08_00:00:43
Locale: ro-RO (ro_RO.UTF-8); Calc: threaded