tdf#118674 Paste special and unformatted for shapes in Writer

Change-Id: I348a6f93b61ea644077dcd3a16ba9d9fe17afb91